Back/work/log/fromFrontX
subId=1
uTime=3
uTime=3
subId=1
src: In function ‘int main()’:
src:5:3: error: expected ‘;’ before ‘printf’
   printf("%d\n",a+b);
   ^~~~~~
